base/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: otel-trivago
  labels:
    otel-trivago/env: "production"
