base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-ingress
spec:
  podSelector:
    matchLabels:
      otel-trivago/allow-ingress: default
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc
spec:
  rules:
    - host: reservation-hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reservation
                port:
                  name: grpc
    - host: room-hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: room
                port:
                  name: grpc
    - host: stay-hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stay
                port:
                  name: grpc
    - host: frontdesk-hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontdesk
                port:
                  name: grpc
